# libfoo

./: .gitignore  CMakeLists.txt  Makefile
include/: foo.h  gopt.h
src/: chkadd.c  chkuadd.c  filesize.c  gets.c  gopt.c  queue.c  stack.c
tests/queue/: queue.c  queue.cpp
tests/stack/: stack.c  stack.cpp
